# backend/api/v1/static/swagger.yaml
@@ -104,10 +104,10 @@ paths:
                     type: string
                     example: "Error Message Expected"
 
-  /place:
+  /plan_trip:
     post:
-      summary: weather details of place.
-      description: get the weather details of the place
+      summary: Plan trip to place.
+      description: Plan trip of the place using information from the user
       security:
         - accessAuth: []
       requestBody:
@@ -144,10 +144,10 @@ paths:
                     example: "Invalid credentials"
 
 
-  /query_place:
+  /save_place:
     post:
-      summary: weather details of place.
-      description: get the weather details of the place
+      summary: save details of place.
+      description: get the weather details, picture of the place and save it
       requestBody:
         required: true
         content:
@@ -155,7 +155,7 @@ paths:
             schema:
               type: object
               properties:
-                city_name:
+                city:
                   type: string
                   format: city_name
                   example: "Lagos"
